--- a/.github/workflows/apache.yml
+++ b/.github/workflows/apache.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Set cluster context
       run: |
         export KUBECONFIG=$HOME/.kube/config
-        kubectl config use-context <your-context-name>
+        kubectl config use-context kubernetes-admin@kubernetes
 
     - name: Verify cluster context
       run: |
