update: add step to list available contexts and modify cluster context in Apache workflow

--- a/.github/workflows/apache.yml
+++ b/.github/workflows/apache.yml
@@ -23,10 +23,15 @@ jobs:
         export KUBECONFIG=$HOME/.kube/config
         kubectl config view
 
+    - name: List available contexts
+      run: |
+        export KUBECONFIG=$HOME/.kube/config
+        kubectl config get-contexts
+
     - name: Set cluster context
       run: |
         export KUBECONFIG=$HOME/.kube/config
-        kubectl config use-context kubernetes-admin@kubernetes
+        kubectl config use-context <your-context-name>
 
     - name: Verify cluster context
       run: |
