update: add step to print kubeconfig file in Apache workflow

--- a/.github/workflows/apache.yml
+++ b/.github/workflows/apache.yml
@@ -18,6 +18,10 @@ jobs:
         mkdir -p $HOME/.kube
         echo "${{ secrets.KUBECONFIG }}" | base64 --decode > $HOME/.kube/config
 
+    - name: Print kubeconfig file
+      run: |
+        cat $HOME/.kube/config
+
     - name: Verify kubeconfig file
       run: |
         export KUBECONFIG=$HOME/.kube/config
