--- a/.github/workflows/apache.yml
+++ b/.github/workflows/apache.yml
@@ -38,6 +38,11 @@ jobs:
         export KUBECONFIG=$HOME/.kube/config
         kubectl cluster-info
 
+    - name: Create Argo CD namespace
+      run: |
+        export KUBECONFIG=$HOME/.kube/config
+        kubectl create namespace argocd
+
     - name: Install Argo CD CRDs
       run: |
         export KUBECONFIG=$HOME/.kube/config
