--- a/.github/workflows/apache.yml
+++ b/.github/workflows/apache.yml
@@ -53,6 +53,11 @@ jobs:
         export KUBECONFIG=$HOME/.kube/config
         kubectl apply -f k8s/argo-application.yml --validate=false
 
+    - name: Install Argo CD CLI
+      run: |
+        curl -sSL -o /usr/local/bin/argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
+        chmod +x /usr/local/bin/argocd
+
     - name: Sync Argo CD Application
       run: |
         export KUBECONFIG=$HOME/.kube/config
