--- a/vagrant-kubeadm-kubernetes-main/Vagrantfile
+++ b/vagrant-kubeadm-kubernetes-main/Vagrantfile
@@ -117,6 +117,9 @@ Vagrant.configure("2") do |config|
       # Copy kubeconfig from shared folder
       mkdir -p $HOME/.kube
       cp /vagrant/configs/admin.conf $HOME/.kube/config
+
+      # Update kubeconfig to use the correct server endpoint
+      sed -i 's/localhost/kubernetes.default.svc/' $HOME/.kube/config
     SHELL
   end
 end
